@@ -10,7 +10,6 @@ compression:
 
 string + function name extraction:
 * .txx (templates, see insight toolkit for examples)
-* rewrite ctags invocation to use -x and also extract line numbers of function names
 
 queueing system:
 * let top level script also read from a queue
